bridge/base/0-pysoar-namespace.yaml
#! 0-pysoar-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: pysoar
    labels:
        com.docker.compose.project: pysoar
