bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: pysoar
    labels:
        com.docker.compose.project: pysoar
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: pysoar
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: pysoar
                com.docker.compose.service: api
                com.docker.compose.network.pysoar-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: pysoar-api
                  image: pysoar-api
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['curl -f http://localhost:8000/api/v1/health']
                    periodSeconds: 30
                    initialDelaySeconds: 10
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: api-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app-src
                      mountPath: /app/src
                      readOnly: true
                    - name: app-alembic
                      mountPath: /app/alembic
                      readOnly: true
                    - name: app-uploads
                      mountPath: /app/uploads
                    - name: app-logs
                      mountPath: /app/logs
            volumes:
                - name: app-src
                  hostPath:
                    path: C:\Users\jacob\pysoar\src
                  readOnly: true
                - name: app-alembic
                  hostPath:
                    path: C:\Users\jacob\pysoar\alembic
                  readOnly: true
                - name: app-uploads
                  persistentVolumeClaim:
                    claimName: api-pysoar-uploads
                - name: app-logs
                  persistentVolumeClaim:
                    claimName: api-pysoar-logs
