bridge/base/redis-deployment.yaml
#! redis-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: redis
    namespace: pysoar
    labels:
        com.docker.compose.project: pysoar
        com.docker.compose.service: redis
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: pysoar
            com.docker.compose.service: redis
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: pysoar
                com.docker.compose.service: redis
                com.docker.compose.network.pysoar-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: pysoar-redis
                  image: redis:7-alpine
                  imagePullPolicy: IfNotPresent
                  args:
                    - redis-server
                    - --appendonly
                    - yes
                    - --maxmemory
                    - 256mb
                    - --maxmemory-policy
                    - allkeys-lru
                  livenessProbe:
                    exec:
                        command: [redis-cli ping]
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: redis-6379
                      containerPort: 6379
                  volumeMounts:
                    - name: data
                      mountPath: /data
            volumes:
                - name: data
                  persistentVolumeClaim:
                    claimName: redis-pysoar-redis
