bridge/base/scheduler-deployment.yaml
#! scheduler-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: scheduler
    namespace: pysoar
    labels:
        com.docker.compose.project: pysoar
        com.docker.compose.service: scheduler
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: pysoar
            com.docker.compose.service: scheduler
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: pysoar
                com.docker.compose.service: scheduler
                com.docker.compose.network.pysoar-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: pysoar-scheduler
                  image: pysoar-scheduler
                  imagePullPolicy: IfNotPresent
                  args:
                    - celery
                    - -A
                    - src.workers.celery_app
                    - beat
                    - --loglevel=info
                  ports:
                    - name: scheduler-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app-src
                      mountPath: /app/src
                      readOnly: true
            volumes:
                - name: app-src
                  hostPath:
                    path: C:\Users\jacob\pysoar\src
                  readOnly: true
