bridge/base/worker-deployment.yaml
#! worker-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: worker
    namespace: pysoar
    labels:
        com.docker.compose.project: pysoar
        com.docker.compose.service: worker
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: pysoar
            com.docker.compose.service: worker
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: pysoar
                com.docker.compose.service: worker
                com.docker.compose.network.pysoar-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: pysoar-worker
                  image: pysoar-worker
                  imagePullPolicy: IfNotPresent
                  args:
                    - celery
                    - -A
                    - src.workers.celery_app
                    - worker
                    - --loglevel=info
                    - --concurrency=2
                  ports:
                    - name: worker-8000
                      containerPort: 8000
                  volumeMounts:
                    - name: app-src
                      mountPath: /app/src
                      readOnly: true
                    - name: app-uploads
                      mountPath: /app/uploads
                    - name: app-logs
                      mountPath: /app/logs
            volumes:
                - name: app-src
                  hostPath:
                    path: C:\Users\jacob\pysoar\src
                  readOnly: true
                - name: app-uploads
                  persistentVolumeClaim:
                    claimName: worker-pysoar-uploads
                - name: app-logs
                  persistentVolumeClaim:
                    claimName: worker-pysoar-logs
