bridge/base/flower-expose.yaml
#! flower-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: flower
    namespace: pysoar
    labels:
        com.docker.compose.project: pysoar
        com.docker.compose.service: flower
spec:
    selector:
        com.docker.compose.project: pysoar
        com.docker.compose.service: flower
    ports:
        - name: flower-8000
          port: 8000
          targetPort: flower-8000
        - name: flower-5555
          port: 5555
          targetPort: flower-5555
