bridge/base/scheduler-expose.yaml
#! scheduler-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: scheduler
    namespace: pysoar
    labels:
        com.docker.compose.project: pysoar
        com.docker.compose.service: scheduler
spec:
    selector:
        com.docker.compose.project: pysoar
        com.docker.compose.service: scheduler
    ports:
        - name: scheduler-8000
          port: 8000
          targetPort: scheduler-8000
